load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dummer",
    srcs = [
        "dummer_service.go",
    ],
    importpath = "github.com/veganafro/mono/golang/internal/dummer/v1",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//golang/internal/logwrapper:logwrapper",
        "//golang/pkg/dummer/v1:dummer",
        "//golang/pkg/dummy/v1:dummy",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "dummer_test",
    srcs = [
        "dummer_service_test.go",
    ],
    embed = [
        ":dummer",
        "//golang/internal/dummy/v1:dummy",
    ],
    importpath = "github.com/veganafro/mono/golang/internal/dummer/v1",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//golang/pkg/dummer/v1:dummer",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
