load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dummy",
    srcs = [
        "dummy_service.go",
    ],
    importpath = "github.com/veganafro/mono/golang/internal/dummy/v1",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//golang/pkg/dummy/v1:dummy",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "dummy_test",
    srcs = [
        "dummy_service_test.go",
    ],
    embed = [
        ":dummy",
    ],
    importpath = "github.com/veganafro/mono/golang/internal/dummy/v1",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//golang/pkg/dummy/v1:dummy",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
